# dx

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  css_generator.c  css_generator.h  dx-styles  dx-styles.c  dx_styles_c  file_io.c  file_io.h  generate_styles  id_generator.c  id_generator.h  main  main.c  op  package-lock.json  parser.c  parser.h  styles.c  styles.css  styles.fbs  styles.toml  styles_builder.h  styles_generated.h  styles_generator  styles_generator.c  toml_converter  tree_sitter_tsx.h  utils.c  utils.h  watcher.c  watcher.h
flatcc/: CHANGELOG.md  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake
flatcc/.github/workflows/: ci.yml  weekly.yml
flatcc/samples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
flatcc/samples/monster/: CTestTestfile.cmake  Makefile  cmake_install.cmake  monster
flatcc/samples/reflection/: CTestTestfile.cmake  Makefile  bfbs2json  cmake_install.cmake
flatcc/src/cli/: CTestTestfile.cmake  Makefile  cmake_install.cmake
flatcc/src/compiler/: CTestTestfile.cmake  Makefile  cmake_install.cmake
flatcc/src/runtime/: CTestTestfile.cmake  Makefile  cmake_install.cmake
flatcc/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
flatcc/test/cgen_test/: CTestTestfile.cmake  Makefile  cgen_test  cmake_install.cmake
flatcc/test/doublevec_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  doublevec_test
flatcc/test/emit_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  emit_test
flatcc/test/flatc_compat/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  flatc_compat
flatcc/test/json_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  json_test  json_test_uq_off  json_test_uql  test_basic_parse  test_json  test_json_parser  test_json_printer
flatcc/test/load_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  load_test
flatcc/test/monster_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  monster_test
flatcc/test/monster_test_concat/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  monster_test_concat
flatcc/test/monster_test_cpp/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  monster_test_cpp
flatcc/test/monster_test_prefix/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  monster_test_prefix
flatcc/test/monster_test_solo/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  monster_test_solo
flatcc/test/optional_scalars_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  optional_scalars_test  optional_scalars_test.c  optional_scalars_test.fbs
flatcc/test/reflection_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  reflection_test
src/: App.tsx  index.html  main  main.c  output.css  package-lock.json
